Ajout  animations.css dans chaque fichiers

--- a/Ohmyfood.html
+++ b/Ohmyfood.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/mbaccueil.css" media="screen and (max-width: 1024px)"> 
     <link rel="stylesheet" href="css/desktopaccueil.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="css/animation.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
