--- a/ledélicedessens.html
+++ b/ledélicedessens.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/mbrestaurants.css " media="screen and (max-width: 1024px)">
     <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="css/animation.css">
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
