--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -28,7 +28,7 @@
 
     <header>
         <nav class="back">
-            <a href="ohmyfood.html">
+            <a href="index.html">
                 <i class="fas fa-arrow-left"></i>
             </a>
         </nav>
