--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -27,7 +27,7 @@
 
      <header>
         <nav class="back">
-            <a href="ohmyfood.html">
+            <a href="index.html">
                 <i class="fas fa-arrow-left"></i>
             </a>
         </nav>
