--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e1709e4baf.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/mbrestaurants.css " media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="css/tabletterestaurants.css " media="screen and (max-width: 1024px)">
     <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
     <link rel="stylesheet" href="css/animation.css">
     
