rename fichier css

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/e1709e4baf.js" crossorigin="anonymous"></script>
 
   
-    <link rel="stylesheet" href="css/tabletterestaurants.css " media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="css/mbrestaurants.css " media="screen and (max-width: 1024px)">
     <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
     <link rel="stylesheet" href="css/animation.css">
     
