--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -9,6 +9,7 @@
    
     <link rel="stylesheet" href="css/mbrestaurants.css " media="screen and (max-width: 1024px)">
     <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="css/petiteecrant.css" media="screen and (max-width: 613px)">
     <link rel="stylesheet" href="css/animation.css">
     
     
