--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -9,6 +9,7 @@
   
     <link rel="stylesheet" href="css/tabletterestaurants.css " media="screen and (max-width: 1024px)">
     <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="css/mobilefirstrestaurants.css" media="screen and (max-width: 613px)">
     <link rel="stylesheet" href="css/animation.css">
     
 
