--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="conteneur_description_child">
                         <div class="description_nom">
                            <h2 class="restaurant_name">La palette du goût</h2>
-                           <h3 class="restaurant_localité">Ménilmontant</h3>
+                           <p class="restaurant_localité">Ménilmontant</p>
                        </div>
                        <div class="coeur">
                            <span class="har"> <i class="far fa-heart"></i></span>
@@ -137,7 +137,7 @@
                     <div class="conteneur_description_child">
                         <div class="description_nom">
                            <h2 class="restaurant_name">La note enchanté</h2>
-                           <h3 class="restaurant_localité">Charonne</h3>
+                           <p class="restaurant_localité">Charonne</p>
                         </div>
                         <div class="coeur">
                             <span class="har"> <i class="far fa-heart"></i></span>
@@ -159,7 +159,7 @@
                     <div class="conteneur_description_child">
                         <div class="description_nom">
                            <h2 class="restaurant_name">A la française</h2>
-                           <h3 class="restaurant_localité">Cité rouge</h3>
+                           <p class="restaurant_localité">Cité rouge</p>
                        </div>
                        <div class="coeur">
                         <span class="har"> <i class="far fa-heart"></i></span>
@@ -180,7 +180,7 @@
                     <div class="conteneur_description_child">
                        <div class="description_nom">
                           <h2 class="restaurant_name">Le délice des sens</h2>
-                          <h3 class="restaurant_localité">Folie-Méricourt</h3>
+                          <p class="restaurant_localité">Folie-Méricourt</p>
                        </div>
                        <div class="coeur">
                           <span class="har"> <i class="far fa-heart"></i></span>
