--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -63,7 +63,7 @@
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Tartare de poulpe acidulé</h2>
-                     <h3 class="description_epd">Au zestes d'orange</h3>
+                     <p class="description_epd">Au zestes d'orange</p>
                  </div>
                  <div class="conteneur_price_slide">
                     <p class="price">
@@ -76,7 +76,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Velouté de légumes d'antan</h2>
-                   <h3 class="description_epd">Carotte, panais, topinambour</h3>
+                   <p class="description_epd">Carotte, panais, topinambour</p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -89,7 +89,7 @@
              <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Soupe à l'oignon</h2>
-                   <h3 class="description_epd">Revisitée </h3>
+                   <p class="description_epd">Revisitée </p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -108,7 +108,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Coquilles Saint-Jacques</h2>
-                  <h3 class="description_epd">Accompagné d'une purée de panais</h3>
+                  <p class="description_epd">Accompagné d'une purée de panais</p>
               </div>
               <div class="conteneur_price_slide">
                 <p class="price">
@@ -121,7 +121,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Magret de canard</h2>
-                <h3 class="description_epd"> Et parmentier de pommes de terres</h3>
+                <p class="description_epd"> Et parmentier de pommes de terres</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -134,7 +134,7 @@
           <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Pigeonneau d'Ille-et-Vilaine</h2>
-                <h3 class="description_epd">Sur son lit de gnocchis aux légumes</h3>
+                <p class="description_epd">Sur son lit de gnocchis aux légumes</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -153,7 +153,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Pétales de violettes glacés</h2>
-                  <h3 class="description_epd">Et purée de noisettes</h3>
+                  <p class="description_epd">Et purée de noisettes</p>
               </div>
               <div class="conteneur_price_slide">
                 <p class="price">
@@ -166,7 +166,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Fondant au chocolat</h2>
-                <h3 class="description_epd">Revisité</h3>
+                <p class="description_epd">Revisité</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -179,7 +179,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Millefeuille croustillant</h2>
-                <h3 class="description_epd">Myrtilles et pâte d'amande </h3>
+                <p class="description_epd">Myrtilles et pâte d'amande </p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
