--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -60,7 +60,7 @@
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Ravioles de foie gras</h2>
-                     <h3 class="description_epd">Accompagné de leur crème à la truffe</h3>
+                     <p class="description_epd">Accompagné de leur crème à la truffe</p>
                  </div>
                   
                  <div class="conteneur_price_slide">
@@ -74,7 +74,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Caviar osciètre</h2>
-                   <h3 class="description_epd">Sur blini à la farine de blé noir</h3>
+                   <p class="description_epd">Sur blini à la farine de blé noir</p>
                </div>
                <div class="conteneur_price_slide">
                    <p class="price">
@@ -87,7 +87,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Homard et espuma de potiron</h2>
-                   <h3 class="description_epd">Mariné aux zestes d'orange </h3>
+                   <p class="description_epd">Mariné aux zestes d'orange </p>
                </div>
                <div class="conteneur_price_slide">
                    <p class="price">
@@ -100,7 +100,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Foie gras de canard cuit entier</h2>
-                   <h3 class="description_epd">Confiture de figue et pain toasté </h3>
+                   <p class="description_epd">Confiture de figue et pain toasté </p>
                </div>
                <div class="conteneur_price_slide">
                    <p class="price">
@@ -119,7 +119,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Noix de coquilles Saint-Jacques</h2>
-                  <h3 class="description_epd">Sur lit de purée de céleri-rave</h3>
+                  <p class="description_epd">Sur lit de purée de céleri-rave</p>
               </div>
               <div class="conteneur_price_slide">
                   <p class="price">
@@ -132,7 +132,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Langoustine poêlée</h2>
-                <h3 class="description_epd">Purée de patate douce</h3>
+                <p class="description_epd">Purée de patate douce</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -145,7 +145,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Mijoté de queue de boeuf</h2>
-                <h3 class="description_epd">Et riz sauvage aux zestes de citron</h3>
+                <p class="description_epd">Et riz sauvage aux zestes de citron</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -164,7 +164,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Macaron noisette et chocolat</h2>
-                  <h3 class="description_epd">Glace au caramel brun et sel de Guérande</h3>
+                  <p class="description_epd">Glace au caramel brun et sel de Guérande</p>
               </div>
               <div class="conteneur_price_slide">
                   <p class="price">
@@ -177,7 +177,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Baba rhum revisité</h2>
-                <h3 class="description_epd">Avec son coulis de citron</h3>
+                <p class="description_epd">Avec son coulis de citron</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -190,7 +190,7 @@
           <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Tarte aux citron meringuée </h2>
-                <h3 class="description_epd">Destructurée</h3>
+                <p class="description_epd">Destructurée</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
