--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -62,7 +62,7 @@
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Fricassée d'escargot</h2>
-                     <h3 class="description_epd">Au piment d'espelette</h3>
+                     <p class="description_epd">Au piment d'espelette</p>
                  </div>
                  <div class="conteneur_price_slide">
                     <p class="price">
@@ -75,7 +75,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Foie gras de canard mi-cuit</h2>
-                   <h3 class="description_epd">Et ses copeaux de truffe noire</h3>
+                   <p class="description_epd">Et ses copeaux de truffe noire</p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -88,7 +88,7 @@
              <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Oeuf au plat</h2>
-                   <h3 class="description_epd">À la truffe sur lit de poirreaux </h3>
+                   <p class="description_epd">À la truffe sur lit de poirreaux </p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -105,7 +105,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Filet de boeuf aux herbes</h2>
-                  <h3 class="description_epd">Accompagné de sa ribambelle de légumes</h3>
+                  <p class="description_epd">Accompagné de sa ribambelle de légumes</p>
               </div>
               <div class="conteneur_price_slide">
                 <p class="price">
@@ -118,7 +118,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Parmentier de queue de boeuf</h2>
-            <h3 class="description_epd"> À la truffe noire sur sa purée de panais</h3>
+            <p class="description_epd"> À la truffe noire sur sa purée de panais</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -131,7 +131,7 @@
           <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Filet de turbo</h2>
-                <h3 class="description_epd">Aux agrumes </h3>
+                <p class="description_epd">Aux agrumes </p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -147,7 +147,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Paris-Brest</h2>
-                  <h3 class="description_epd">Revisité</h3>
+                  <p class="description_epd">Revisité</p>
               </div>
                <div class="conteneur_price_slide">
                    <p class="price">
@@ -161,7 +161,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Maccaron au chocolat d'exception</h2>
-                <h3 class="description_epd">Et glace à la vanille de Madagascar</h3>
+                <p class="description_epd">Et glace à la vanille de Madagascar</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -174,7 +174,7 @@
           <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Mousse au chocolat</h2>
-                <h3 class="description_epd">Au piment d'espelette et à la truffe noire </h3>
+                <p class="description_epd">Au piment d'espelette et à la truffe noire </p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
