--- a/ledélicedessens.html
+++ b/ledélicedessens.html
@@ -62,7 +62,7 @@
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Tartare de thon</h2>
-                     <h3 class="description_epd">Assaisonné au yuzu</h3>
+                     <p class="description_epd">Assaisonné au yuzu</p>
                  </div>
                  <div class="conteneur_price_slide">
                     <p class="price">
@@ -75,7 +75,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Bouchée de homard croustillant</h2>
-                   <h3 class="description_epd">Et sa farandole de petits légumes</h3>
+                   <p class="description_epd">Et sa farandole de petits légumes</p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -88,7 +88,7 @@
                <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Velouté de cèpes</h2>
-                   <h3 class="description_epd">Au truffes</h3>
+                   <p class="description_epd">Au truffes</p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
@@ -107,7 +107,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Poulet rôti aux herbes de provence</h2>
-                  <h3 class="description_epd">Et sa crème de truffe</h3>
+                  <p class="description_epd">Et sa crème de truffe</p>
               </div>
               <div class="conteneur_price_slide">
                 <p class="price">
@@ -120,7 +120,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Langouste rôtie</h2>
-                <h3 class="description_epd"> Et ses légumes de saison</h3>
+                <p class="description_epd"> Et ses légumes de saison</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -133,7 +133,7 @@
           <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Côte de boeuf angus</h2>
-                <h3 class="description_epd">Et ses purée de panais</h3>
+                <p class="description_epd">Et ses purée de panais</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -152,7 +152,7 @@
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Paris-Brest</h2>
-                  <h3 class="description_epd">Revisité</h3>
+                  <p class="description_epd">Revisité</p>
               </div>
               <div class="conteneur_price_slide">
                 <p class="price">
@@ -165,7 +165,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Maccaron au chocolat d'exception</h2>
-                <h3 class="description_epd">Et glace à la vanille de Madagascar</h3>
+                <p class="description_epd">Et glace à la vanille de Madagascar</p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
@@ -178,7 +178,7 @@
             <article class="menu">
              <div class="conteneur_titledescription">
                 <h2 class="title_epd">Mousse au chocolat</h2>
-                <h3 class="description_epd">Au piment d'espelette et à la truffe noire </h3>
+                <p class="description_epd">Au piment d'espelette et à la truffe noire </p>
             </div>
             <div class="conteneur_price_slide">
                 <p class="price">
