conversion de jpg vers webp (performance)

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -43,7 +43,7 @@
        </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restautant À la française">
+           <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restautant À la française">
        </picture>
 
        <div id="conteneur_menu">
