--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -43,7 +43,7 @@
        </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restautant La palette du goût">
+           <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="Restautant La palette du goût">
        </picture>
 
        <div id="conteneur_menu">
