--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                        <span class="Nouveau_child"> Nouveau</span>
                     </div>  
                 <picture class="img_resto">
-                   <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+                   <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="Restaurant La palette du goût">
                 </picture>
                 
                 <div class="conteneur_description">
@@ -130,7 +130,7 @@
                    </div>  
 
                 <picture class="img_resto">
-                   <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchanté">
+                   <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="Restaurant La note enchanté">
                 </picture>
 
                 <div class="conteneur_description">
@@ -152,7 +152,7 @@
             <article class="carte_restaurant">
                 <a href="alafrançaise.html">
                <picture class="img_resto">
-                   <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
+                   <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restaurant A la française">
                    
                 </picture>
                 <div class="conteneur_description">
@@ -174,7 +174,7 @@
             <article class="carte_restaurant">
                 <a href="ledélicedessens.html">
                 <picture class="img_resto">
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens ">
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="Restaurant Le délices des sens ">
                 </picture>
                 <div class="conteneur_description">
                     <div class="conteneur_description_child">
