--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -42,7 +42,7 @@
       </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restautant La note enchanté">
+           <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="Restautant La note enchanté">
        </picture>
 
        <div id="conteneur_menu">
