--- a/ledélicedessens.html
+++ b/ledélicedessens.html
@@ -42,7 +42,7 @@
        </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restautant Le délice des sens">
+           <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="Restautant Le délice des sens">
        </picture>
 
        <div id="conteneur_menu">
