Balise main changement d'affectation

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -27,8 +27,6 @@
     <title>A la française</title>
 </head>
 <body>
-    <main>
-        
     
 
     <header>
@@ -46,7 +44,7 @@
            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restautant À la française">
        </picture>
 
-       <div id="conteneur_menu">
+       <main id="conteneur_menu">
            <div class="header_menu">
                 <h1>À la française</h1   >
                     <div class="coeur">
