--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -27,7 +27,7 @@
     <title>La note enchanté</title>
 </head>
 <body>
-    <main>
+    
         
 
      <header>
@@ -45,7 +45,7 @@
            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="Restautant La note enchanté">
        </picture>
 
-       <div id="conteneur_menu">
+       <main id="conteneur_menu">
            <div class="header_menu">
                 <h1>La note enchantée</h1>
                 <div class="coeur">
