--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -28,7 +28,7 @@
     <title>La palette du gôut</title>
 </head>
 <body>
-    <main>
+   
         
 
     <header>
@@ -46,7 +46,7 @@
            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="Restautant La palette du goût">
        </picture>
 
-       <div id="conteneur_menu">
+       <main id="conteneur_menu">
 
            <div class="header_menu">
                 <h1>La palette du goût</h1>
