--- a/ledélicedessens.html
+++ b/ledélicedessens.html
@@ -28,7 +28,7 @@
     <title>Le délice des sens</title>
 </head>
 <body>
-    <main>
+   
 
     <header>
         <nav class="back">
@@ -45,7 +45,7 @@
            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="Restautant Le délice des sens">
        </picture>
 
-       <div id="conteneur_menu">
+       <main id="conteneur_menu">
            <div class="header_menu">
                 <h1>Le délice des sens</h1>
                 <div class="coeur">
