Soulignement entree plats desserts

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -58,7 +58,10 @@
            </div>
         <div class="conteneur_menu_main">
            <section class="entrées">
-               <h2 class="title_entree"><span class="title_bbottom">ENTR</span>ÉES</h2>
+               <div class="bloc-titre">
+                 <h2 class="title_entree">ENTRÉES</h2>
+                <div class="line-t"></div>
+               </div>
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Fricassée d'escargot</h2>
@@ -101,7 +104,10 @@
            </section>
 
            <section class="plats">
-            <h2 class="title_entree"><span class="title_bbottom">PLAT</span>S</h2>
+            <div class="bloc-titre">
+                <h2 class="title_entree">PLATS</h2>
+               <div class="line-t"></div>
+              </div>
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Filet de boeuf aux herbes</h2>
@@ -143,7 +149,10 @@
            </section>
 
            <section class="desserts">
-            <h2 class="title_entree"><span class="title_bbottom">DESS</span>ERTS</h2>
+            <div class="bloc-titre">
+                <h2 class="title_entree">DESSERTS</h2>
+               <div class="line-t"></div>
+              </div>
             <article class="menu">
                <div class="conteneur_titledescription">
                   <h2 class="title_epd">Paris-Brest</h2>
