Mise en place soulignement titre menu

--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -56,7 +56,10 @@
             
             <div class="conteneur_menu_main">
                <section class="entrées">
-               <h2 class="title_entree"><span class="title_bbottom">ENTR</span>ÉES</h2>
+                <div class="bloc-titre">
+                    <h2 class="title_entree">ENTRÉES</h2>
+                   <div class="line-t"></div>
+                  </div>
                <article class="menu">
                   <div class="conteneur_titledescription">
                      <h2 class="title_epd">Ravioles de foie gras</h2>
@@ -114,7 +117,10 @@
 
                <section class="plats">
 
-            <h2 class="title_entree"><span class="title_bbottom">PLAT</span>S</h2>
+                <div class="bloc-titre">
+                    <h2 class="title_entree">PLATS</h2>
+                   <div class="line-t"></div>
+                </div>
 
             <article class="menu">
                <div class="conteneur_titledescription">
@@ -159,7 +165,10 @@
 
                <section class="desserts">
 
-            <h2 class="title_entree"><span class="title_bbottom">DESS</span>ERTS</h2>
+                <div class="bloc-titre">
+                    <h2 class="title_entree">DESSERTS</h2>
+                   <div class="line-t"></div>
+                </div>
 
             <article class="menu">
                <div class="conteneur_titledescription">
