changement nom accompagnement menu

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -91,7 +91,7 @@
              <article class="menu">
                 <div class="conteneur_titledescription">
                    <h2 class="title_epd">Oeuf au plat</h2>
-                   <p class="description_epd">Assaisonné à la truffe sur lit de  </p>
+                   <p class="description_epd">Assaisonné à la truffe sur lit de poirreaux  </p>
                </div>
                <div class="conteneur_price_slide">
                 <p class="price">
