creation chemin dossier images

--- a/Restaurants/alafrançaise.html
+++ b/Restaurants/alafrançaise.html
@@ -8,9 +8,9 @@
 
   
     
-    <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
-    <link rel="stylesheet" href="css/mobilefirstrestaurants.css" media="screen and (max-width: 1024px)">
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="../css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="../css/mobilefirstrestaurants.css" media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="../css/animation.css">
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
        </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restautant À la française">
+           <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restautant À la française">
        </picture>
 
        <main id="conteneur_menu">
