--- a/Restaurants/lapalettedugout.html
+++ b/Restaurants/lapalettedugout.html
@@ -8,9 +8,9 @@
 
     
     
-    <link rel="stylesheet" href="css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
-    <link rel="stylesheet" href="css/mobilefirstrestaurants.css" media="screen and (max-width: 1024px)">
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="../css/desktoprestaurant.css" media="screen and (min-width: 1025px)">
+    <link rel="stylesheet" href="../css/mobilefirstrestaurants.css" media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="../css/animation.css">
   
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
        </header>
 
        <picture class="img_resto">
-           <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="Restautant La palette du goût">
+           <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="Restautant La palette du goût">
        </picture>
 
        <main id="conteneur_menu">
