creation chemin vers logo

--- a/Restaurants/lanoteenchantée.html
+++ b/Restaurants/lanoteenchantée.html
@@ -37,7 +37,7 @@
             </a>
         </nav>
         <div id="logo">
-           <img src="images/logo/ohmyfood@2x.svg" alt="logo_du_site">
+           <img src="../images/logo/ohmyfood@2x.svg" alt="logo_du_site">
         </div>
       </header>
 
