--- a/Restaurants/lapalettedugout.html
+++ b/Restaurants/lapalettedugout.html
@@ -38,7 +38,7 @@
             </a>
         </nav>
         <div id="logo">
-           <img src="images/logo/ohmyfood@2x.svg" alt="logo_du_site">
+           <img src="../images/logo/ohmyfood@2x.svg" alt="logo_du_site">
         </div>
        </header>
 
