creation chemin vers accueil

--- a/Restaurants/lapalettedugout.html
+++ b/Restaurants/lapalettedugout.html
@@ -33,7 +33,7 @@
 
     <header>
         <nav class="back">
-            <a href="index.html">
+            <a href="../index.html">
                 <i class="fas fa-arrow-left"></i>
             </a>
         </nav>
