--- a/Restaurants/ledélicedessens.html
+++ b/Restaurants/ledélicedessens.html
@@ -32,7 +32,7 @@
 
     <header>
         <nav class="back">
-            <a href="index.html">
+            <a href="../index.html">
                 <i class="fas fa-arrow-left"></i>
             </a>
         </nav>
