supression code inutile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <main>
 
   <div class="loader">
-      <span class="reload loader-quart"></span> 
+      <span class="loader-quart"></span> 
      
     </div> 
     <header>
