ajustement margin-left (fonctionnement)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section id="section_fonctionnement">
         
-             <h2>Fonctionnement</h2>
+             <h2 class="fonc">Fonctionnement</h2>
         
         <div class="conteneur_fonctionnement">
 
