--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
             </a>
             </article>
-            <article class="carte_restaurant">
+            <article class="carte_restaurant new">
 
                 <a href="Restaurants/lanoteenchantée.html">
  
@@ -148,7 +148,7 @@
             </a>
             </article>
 
-            <article class="carte_restaurant">
+            <article class="carte_restaurant new">
                 <a href="Restaurants/alafrançaise.html">
                <picture class="img_resto">
                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="Restaurant A la française">
